crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N801_N801.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N801.py:1:7: N801 (invalid-class-name) Class name `bad` should use CapWords convention
  |
1 | class bad:
  |       ^^^ N801 (invalid-class-name)
2 |     pass
  |

N801.py:5:7: N801 (invalid-class-name) Class name `_bad` should use CapWords convention
  |
5 | class _bad:
  |       ^^^^ N801 (invalid-class-name)
6 |     pass
  |

N801.py:9:7: N801 (invalid-class-name) Class name `__bad` should use CapWords convention
   |
 9 | class __bad:
   |       ^^^^^ N801 (invalid-class-name)
10 |     pass
   |

N801.py:13:7: N801 (invalid-class-name) Class name `bad_class` should use CapWords convention
   |
13 | class bad_class:
   |       ^^^^^^^^^ N801 (invalid-class-name)
14 |     pass
   |

N801.py:17:7: N801 (invalid-class-name) Class name `Bad_Class` should use CapWords convention
   |
17 | class Bad_Class:
   |       ^^^^^^^^^ N801 (invalid-class-name)
18 |     pass
   |

N801.py:20:7: N801 (invalid-class-name) Class name `Bad__Class` should use CapWords convention
   |
18 |     pass
19 |
20 | class Bad__Class:
   |       ^^^^^^^^^^ N801 (invalid-class-name)
21 |     pass
   |

N801.py:23:7: N801 (invalid-class-name) Class name `BAD_CLASS` should use CapWords convention
   |
21 |     pass
22 |
23 | class BAD_CLASS:
   |       ^^^^^^^^^ N801 (invalid-class-name)
24 |     pass
   |
