crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N802_N802.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N802.py:4:5: N802 (invalid-function-name) Function name `Bad` should be lowercase
  |
4 | def Bad():
  |     ^^^ N802 (invalid-function-name)
5 |     pass
  |

N802.py:8:5: N802 (invalid-function-name) Function name `_Bad` should be lowercase
  |
8 | def _Bad():
  |     ^^^^ N802 (invalid-function-name)
9 |     pass
  |

N802.py:12:5: N802 (invalid-function-name) Function name `BAD` should be lowercase
   |
12 | def BAD():
   |     ^^^ N802 (invalid-function-name)
13 |     pass
   |

N802.py:16:5: N802 (invalid-function-name) Function name `BAD_FUNC` should be lowercase
   |
16 | def BAD_FUNC():
   |     ^^^^^^^^ N802 (invalid-function-name)
17 |     pass
   |

N802.py:40:9: N802 (invalid-function-name) Function name `testTest` should be lowercase
   |
38 |         return super().tearDown()
39 |
40 |     def testTest(self):
   |         ^^^^^^^^ N802 (invalid-function-name)
41 |         assert True
   |
