crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N803_N803.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N803.py:1:16: N803 (invalid-argument-name) Argument name `A` should be lowercase
  |
1 | def func(_, a, A):
  |                ^ N803 (invalid-argument-name)
2 |     return _, a, A
  |

N803.py:6:28: N803 (invalid-argument-name) Argument name `A` should be lowercase
  |
5 | class Class:
6 |     def method(self, _, a, A):
  |                            ^ N803 (invalid-argument-name)
7 |         return _, a, A
  |

N803.py:22:16: N803 (invalid-argument-name) Argument name `A` should be lowercase
   |
21 | @override  # Incorrect usage
22 | def func(_, a, A): ...
   |                ^ N803 (invalid-argument-name)
   |

N803.py:25:21: N803 (invalid-argument-name) Argument name `A` should be lowercase
   |
25 | func = lambda _, a, A: ...
   |                     ^ N803 (invalid-argument-name)
   |

N803.py:29:42: N803 (invalid-argument-name) Argument name `A` should be lowercase
   |
28 | class Extended(Class):
29 |     method = override(lambda self, _, a, A: ...)  # Incorrect usage
   |                                          ^ N803 (invalid-argument-name)
   |
