crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N806_N806.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N806.py:12:5: N806 (non-lowercase-variable-in-function) Variable `Camel` in function should be lowercase
   |
10 |     GLOBAL = "bar"
11 |     lower = 0
12 |     Camel = 0
   |     ^^^^^ N806 (non-lowercase-variable-in-function)
13 |     CONSTANT = 0
14 |     _ = 0
   |

N806.py:13:5: N806 (non-lowercase-variable-in-function) Variable `CONSTANT` in function should be lowercase
   |
11 |     lower = 0
12 |     Camel = 0
13 |     CONSTANT = 0
   |     ^^^^^^^^ N806 (non-lowercase-variable-in-function)
14 |     _ = 0
   |

N806.py:46:5: N806 (non-lowercase-variable-in-function) Variable `Bad` in function should be lowercase
   |
45 | def model_assign() -> None:
46 |     Bad = apps.get_model("zerver", "Stream")  # N806
   |     ^^^ N806 (non-lowercase-variable-in-function)
47 |     Attachment = apps.get_model("zerver", "Attachment")  # OK
48 |     Recipient = apps.get_model("zerver", model_name="Recipient")  # OK
   |

N806.py:53:5: N806 (non-lowercase-variable-in-function) Variable `Bad` in function should be lowercase
   |
51 |     from django.utils.module_loading import import_string
52 |
53 |     Bad = import_string("django.core.exceptions.ValidationError")  # N806
   |     ^^^ N806 (non-lowercase-variable-in-function)
54 |     ValidationError = import_string("django.core.exceptions.ValidationError")  # OK
   |

N806.py:56:5: N806 (non-lowercase-variable-in-function) Variable `Bad` in function should be lowercase
   |
54 |     ValidationError = import_string("django.core.exceptions.ValidationError")  # OK
55 |
56 |     Bad = apps.get_model()  # N806
   |     ^^^ N806 (non-lowercase-variable-in-function)
57 |     Bad = apps.get_model(model_name="Stream")  # N806
   |

N806.py:57:5: N806 (non-lowercase-variable-in-function) Variable `Bad` in function should be lowercase
   |
56 |     Bad = apps.get_model()  # N806
57 |     Bad = apps.get_model(model_name="Stream")  # N806
   |     ^^^ N806 (non-lowercase-variable-in-function)
58 |
59 |     Address: Type = apps.get_model("zerver", variable)  # OK
   |

N806.py:60:5: N806 (non-lowercase-variable-in-function) Variable `ValidationError` in function should be lowercase
   |
59 |     Address: Type = apps.get_model("zerver", variable)  # OK
60 |     ValidationError = import_string(variable)  # N806
   |     ^^^^^^^^^^^^^^^ N806 (non-lowercase-variable-in-function)
   |
