crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N811_N811.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N811.py:1:8: N811 (constant-imported-as-non-constant) Constant `CONST` imported as non-constant `const`
  |
1 | import mod.CONST as const
  |        ^^^^^^^^^^^^^^^^^^ N811 (constant-imported-as-non-constant)
2 | from mod import CONSTANT as constant
3 | from mod import ANOTHER_CONSTANT as another_constant
  |

N811.py:2:17: N811 (constant-imported-as-non-constant) Constant `CONSTANT` imported as non-constant `constant`
  |
1 | import mod.CONST as const
2 | from mod import CONSTANT as constant
  |                 ^^^^^^^^^^^^^^^^^^^^ N811 (constant-imported-as-non-constant)
3 | from mod import ANOTHER_CONSTANT as another_constant
4 | import mod.CON as c
  |

N811.py:3:17: N811 (constant-imported-as-non-constant) Constant `ANOTHER_CONSTANT` imported as non-constant `another_constant`
  |
1 | import mod.CONST as const
2 | from mod import CONSTANT as constant
3 | from mod import ANOTHER_CONSTANT as another_constant
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ N811 (constant-imported-as-non-constant)
4 | import mod.CON as c
5 | from mod import C as c
  |

N811.py:4:8: N811 (constant-imported-as-non-constant) Constant `CON` imported as non-constant `c`
  |
2 | from mod import CONSTANT as constant
3 | from mod import ANOTHER_CONSTANT as another_constant
4 | import mod.CON as c
  |        ^^^^^^^^^^^^ N811 (constant-imported-as-non-constant)
5 | from mod import C as c
  |

N811.py:5:17: N811 (constant-imported-as-non-constant) Constant `C` imported as non-constant `c`
  |
3 | from mod import ANOTHER_CONSTANT as another_constant
4 | import mod.CON as c
5 | from mod import C as c
  |                 ^^^^^^ N811 (constant-imported-as-non-constant)
6 |
7 | # These are all OK:
  |
