crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N814_N814.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N814.py:1:8: N814 (camelcase-imported-as-constant) Camelcase `Camel` imported as constant `CAMEL`
  |
1 | import mod.Camel as CAMEL
  |        ^^^^^^^^^^^^^^^^^^ N814 (camelcase-imported-as-constant)
2 | from mod import CamelCase as CAMELCASE
3 | from mod import AnotherCamelCase as ANOTHER_CAMELCASE
  |

N814.py:2:17: N814 (camelcase-imported-as-constant) Camelcase `CamelCase` imported as constant `CAMELCASE`
  |
1 | import mod.Camel as CAMEL
2 | from mod import CamelCase as CAMELCASE
  |                 ^^^^^^^^^^^^^^^^^^^^^^ N814 (camelcase-imported-as-constant)
3 | from mod import AnotherCamelCase as ANOTHER_CAMELCASE
  |

N814.py:3:17: N814 (camelcase-imported-as-constant) Camelcase `AnotherCamelCase` imported as constant `ANOTHER_CAMELCASE`
  |
1 | import mod.Camel as CAMEL
2 | from mod import CamelCase as CAMELCASE
3 | from mod import AnotherCamelCase as ANOTHER_CAMELCASE
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ N814 (camelcase-imported-as-constant)
4 |
5 | # These are all OK:
  |
