crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N817_N817.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N817.py:1:8: N817 (camelcase-imported-as-acronym) CamelCase `CaMel` imported as acronym `CM`
  |
1 | import mod.CaMel as CM
  |        ^^^^^^^^^^^^^^^ N817 (camelcase-imported-as-acronym)
2 | from mod import CamelCase as CC
  |

N817.py:2:17: N817 (camelcase-imported-as-acronym) CamelCase `CamelCase` imported as acronym `CC`
  |
1 | import mod.CaMel as CM
2 | from mod import CamelCase as CC
  |                 ^^^^^^^^^^^^^^^ N817 (camelcase-imported-as-acronym)
  |

N817.py:10:26: N817 (camelcase-imported-as-acronym) CamelCase `ElementTree` imported as acronym `ET`
   |
 9 | # Always an error (relative import)
10 | from ..xml.eltree import ElementTree as ET
   |                          ^^^^^^^^^^^^^^^^^ N817 (camelcase-imported-as-acronym)
   |
