crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N801_N801.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N801.py:4:7: N801 (invalid-class-name) Class name `stillBad` should use CapWords convention
  |
2 |     pass
3 |
4 | class stillBad:
  |       ^^^^^^^^ N801 (invalid-class-name)
5 |     pass
  |

N801.py:10:7: N801 (invalid-class-name) Class name `STILL_BAD` should use CapWords convention
   |
 8 |     pass
 9 |
10 | class STILL_BAD:
   |       ^^^^^^^^^ N801 (invalid-class-name)
11 |     pass
   |
